2010-04-01 Niall Power - <niall.power@sun.com>

	* usr/share/time-slider/lib/time_slider/applet.py: Improve string
	  formatting on notifications and tooltips. Stop the status icon
	  blinking once the notification has been closed.
	* usr/share/time-slider/lib/time_slider/setupgui.py: Forgot to
	  connect rsync folder selection to rsync SMF instance
	  configuration. Added. Also use get_current_folder() instead of
	  get_filename() to get correct folder from FileChooserButton
	  widget.

2010-03-31 Niall Power - <niall.power@sun.com>

	* usr/share/time-slider/lib/time_slider/applet.py: Restrict manual
	  synchronisation menu item to priviliged users only (root or
	  users assigned Primary Administrator profile). Also, don't
	  bother popping up a right click menu if it's empty.

2010-03-31 Niall Power - <niall.power@sun.com>

	* usr/share/time-slider/lib/plugin/rsync/backup.py: Implement cleanup
	  of expired backups on rsync target directory. Uses same rules as
	  time-slider as defined by each auto-snapshot schedule's SMF instance
	* usr/share/time-slider/lib/plugin/rsync/rsyncsmf.py: Add a method to
	  return the list of archived schedules (ie. ones that don't get 
	  cleaned according to the normal schedule retention rules)
	* usr/share/time-slider/lib/time_slider/applet.py: add a 
	  'Synchronize Now' menu item to the applet. Added gio based file
	  monitoring to keep track of when the rsync backup target directory
	  is mounted/unmounted and adjust menu sensitivty accordingly.
	* usr/share/time-slider/lib/time_slider/autosnapsmf.py: Define 
	  SNAPLABELPREFIX as a constant for snapshot label names
	* usr/share/time-slider/lib/time_slider/setupgui.py: Modify RBAC
	  rules to ensure that setup GUI is run with euid of root which is
	  necessary for validation and initialisation of rsync backup target
	  directory
	* usr/share/time-slider/lib/time_slider/timesliderd.py: use 
	  SNAPLABELPREFIX constant instead of local multiply defined values.